save: update review-service api and logic before split
