# review-service/openapi.yaml
@@ -6,35 +6,17 @@ info:
     title: ""
     version: 0.0.1
 paths:
-    /helloworld/{name}:
-        get:
-            tags:
-                - Greeter
-            description: Sends a greeting
-            operationId: Greeter_SayHello
-            parameters:
-                - name: name
-                  in: path
-                  required: true
-                  schema:
-                    type: string
-            responses:
-                "200":
-                    description: OK
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/helloworld.v1.HelloReply'
-    /v1/reply:
+    b/v1/review/appeal:
         post:
             tags:
-                - Review
-            operationId: Review_ReplyReview
+                - Business
+            description: 商家申述用户评价
+            operationId: Business_AppealReview
             requestBody:
                 content:
                     application/json:
                         schema:
-                            $ref: '#/components/schemas/api.review.v1.ReplyReviewRequest'
+                            $ref: '#/components/schemas/api.business.v1.AppealReviewRequest'
                 required: true
             responses:
                 "200":
@@ -42,8 +24,65 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/api.review.v1.ReplyReviewReply'
-    /v1/review:
+                                $ref: '#/components/schemas/api.business.v1.AppealReviewReply'
+    b/v1/review/reply:
+        post:
+            tags:
+                - Business
+            description: 商家回复用户评价
+            operationId: Business_ReplyReview
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/api.business.v1.ReplyReviewRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/api.business.v1.ReplyReviewReply'
+    o/v1/appeal/audit:
+        post:
+            tags:
+                - Operation
+            description: 审核端审核申述
+            operationId: Operation_AuditAppeal
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/api.operation.v1.AuditAppealRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/api.operation.v1.AuditAppealReply'
+    o/v1/review/audit:
+        post:
+            tags:
+                - Operation
+            description: 审核端审核意见
+            operationId: Operation_AuditReview
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/api.operation.v1.AuditReviewRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/api.operation.v1.AuditReviewReply'
+    s/v1/review:
         post:
             tags:
                 - Review
@@ -63,6 +102,88 @@ paths:
                                 $ref: '#/components/schemas/api.review.v1.CreateReviewReply'
 components:
     schemas:
+        api.business.v1.AppealReviewReply:
+            type: object
+            properties:
+                appealID:
+                    type: string
+            description: 商家申述用户评价回复
+        api.business.v1.AppealReviewRequest:
+            type: object
+            properties:
+                reviewID:
+                    type: string
+                storeID:
+                    type: string
+                reason:
+                    type: string
+                content:
+                    type: string
+                picInfo:
+                    type: string
+                videoInfo:
+                    type: string
+            description: 商家申述用户评价请求
+        api.business.v1.ReplyReviewReply:
+            type: object
+            properties:
+                replyID:
+                    type: string
+            description: 回复评价回复
+        api.business.v1.ReplyReviewRequest:
+            type: object
+            properties:
+                reviewID:
+                    type: string
+                storeID:
+                    type: string
+                content:
+                    type: string
+                picInfo:
+                    type: string
+                videoInfo:
+                    type: string
+            description: 回复评价请求
+        api.operation.v1.AuditAppealReply:
+            type: object
+            properties:
+                reviewID:
+                    type: string
+            description: 商家申述用户评价回复
+        api.operation.v1.AuditAppealRequest:
+            type: object
+            properties:
+                reviewID:
+                    type: string
+                status:
+                    type: string
+                opUser:
+                    type: string
+                opReason:
+                    type: string
+                opRemarks:
+                    type: string
+            description: 商家申述用户评价请求
+        api.operation.v1.AuditReviewReply:
+            type: object
+            properties:
+                replyID:
+                    type: string
+            description: 回复评价回复
+        api.operation.v1.AuditReviewRequest:
+            type: object
+            properties:
+                reviewID:
+                    type: string
+                status:
+                    type: string
+                opUser:
+                    type: string
+                opReason:
+                    type: string
+                opRemarks:
+                    type: string
+            description: 回复评价请求
         api.review.v1.CreateReviewReply:
             type: object
             properties:
@@ -94,34 +215,10 @@ components:
                 anonymous:
                     type: boolean
             description: 创建评价的参数
-        api.review.v1.ReplyReviewReply:
-            type: object
-            properties:
-                replyID:
-                    type: string
-            description: 回复评价回复
-        api.review.v1.ReplyReviewRequest:
-            type: object
-            properties:
-                reviewID:
-                    type: string
-                storeID:
-                    type: string
-                content:
-                    type: string
-                picInfo:
-                    type: string
-                videoInfo:
-                    type: string
-            description: 回复评价请求
-        helloworld.v1.HelloReply:
-            type: object
-            properties:
-                message:
-                    type: string
-            description: The response message containing the greetings
 tags:
-    - name: Greeter
-      description: The greeting service definition.
+    - name: Business
+      description: 定义商家端服务
+    - name: Operation
+      description: 定义审核服务
     - name: Review
       description: 定义评价服务
